@@ -17,7 +17,8 @@ java{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v145'
+    mindustryVersion = 'v146'
+    uncVersion = "1.8.9"
     jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
 }
@@ -25,11 +26,38 @@ ext{
 //java 8 backwards compatibility flag
 allprojects{
     tasks.withType(JavaCompile){
+    	options.fork = true
+    	options.forkOptions.jvmArgs.addAll([
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+    	"--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+  	])
+
         options.compilerArgs.addAll(['--release', '8'])
     }
 }
 
 dependencies{
+
+    compileOnly "com.github.EB-wilson.UniverseCore:mindustry:$uncVersion"//涵盖了大部分mod制作相关的工具
+    compileOnly "com.github.EB-wilson.UniverseCore:utilties:$uncVersion"//实用工具集，包含了许多通用工具模块
+    compileOnly "com.github.EB-wilson.UniverseCore:abstract:$uncVersion"//功能抽象层，一些平台相关的行为被抽象为接口，要使用平台相关API时必须导入该模块
+    compileOnly "com.github.EB-wilson.UniverseCore:implabstract:$uncVersion"//中间实现层，有一些关于mod和加载器的功能
+    compileOnly "com.github.EB-wilson.UniverseCore:dynamilizer:$uncVersion"//JDER动态化仓库的内置模块
+    compileOnly "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"//包括组件化接口在内的注解处理器
+  
+    annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"//使用注解处理器
+                
+    //以下是通常不会用到的内部模块，但仍然允许导入，便于对一些较为复杂的需求进行自定义行为
+    //compileOnly "com.github.EB-wilson.UniverseCore:core:$uncVersion"//仅有一个核心静态容器，保存了所有的功能接口的实现单例
+    //compileOnly "com.github.EB-wilson.UniverseCore:android:$uncVersion"//平台相关的功能在安卓的默认实现
+    //compileOnly "com.github.EB-wilson.UniverseCore:android26:$uncVersion"//在安卓API26以上的安卓平台运行时的实现
+    //compileOnly "com.github.EB-wilson.UniverseCore:desktop:$uncVersion"//平台相关的功能在桌面的默认实现
+    //compileOnly "com.github.EB-wilson.UniverseCore:desktop9:$uncVersion"//当桌面版运行时VM版本1.9以上的平台实现
+
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
